--- a/src/components/ProjectList.astro
+++ b/src/components/ProjectList.astro
@@ -8,8 +8,8 @@ import TechStackRow from "@/components/TechStackRow.astro";
   {
     Projects.map((project) => (
       <li>
-        <ProjectCard {...project} server:defer>
-          <div
+        <ProjectCard {...project} >
+          {/* <div
             class="border rounded p-4 bg-white/50 dark:bg-black/50 flex flex-col gap-y-4 relative"
             slot="fallback"
           >
@@ -26,7 +26,7 @@ import TechStackRow from "@/components/TechStackRow.astro";
                 ))}
               </div>
             </div>
-          </div>
+          </div> */}
         </ProjectCard>
       </li>
     ))
