upload: google meta

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -91,6 +91,12 @@ const {
 
     <!-- Vercel Analytics -->
     <Analytics />
+
+    <!-- Google Verification -->
+    <meta
+      name="google-site-verification"
+      content="-n3075BWEk4x15mbPEGnv2i7PEsf_qOJjeh07vys51A"
+    />
   </head>
 
   <body
